<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />


        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@drawable/shape_white_background_no_corner"

            android:orientation="horizontal"
            android:paddingTop="@dimen/half_global_padding">

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_home_page_button"
                android:gravity="center"
                android:text="@string/home_page"
                android:textColor="@color/selector_gray_to_primarycolor_text" />

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_home_service_button"
                android:gravity="center"
                android:text="@string/home_service"
                android:textColor="@color/selector_gray_to_primarycolor_text" />

            <TextView
                android:id="@+id/tv_topic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_home_topic_button"
                android:gravity="center"
                android:text="@string/home_topic"
                android:textColor="@color/selector_gray_to_primarycolor_text" />

            <TextView
                android:id="@+id/tv_me"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_home_me_button"
                android:gravity="center"
                android:text="@string/home_me"
                android:textColor="@color/selector_gray_to_primarycolor_text" />

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_home_more_button"
                android:gravity="center"
                android:text="@string/home_more"
                android:textColor="@color/selector_gray_to_primarycolor_text" />

        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>