<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.cmbb.smartkids.framework.widget.rollingviewpager.RollPagerView
                android:id="@+id/roll_view_pager"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layout_collapseMode="parallax"
                app:rollviewpager_play_delay="3000" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="@dimen/global_padding"
                    android:layout_marginRight="@dimen/global_padding"
                    android:alpha="0.95"
                    android:background="@drawable/shape_white_background_corner"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:hint="寻找有趣的服务"
                    android:textAppearance="@style/TextAppearance.Smart.Small"
                    android:textColorHint="@color/darkgray" />
            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <com.cmbb.smartkids.recyclerview.SmartRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_empty="@layout/view_empty"
        app:layout_progress="@layout/view_progress"
        app:scrollbarStyle="insideOverlay" />


    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_white_background_no_corner"
        android:orientation="horizontal"
        android:paddingTop="@dimen/half_global_padding">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_home_page_button"
            android:gravity="center"
            android:text="@string/home_page"
            android:textColor="@color/selector_gray_to_primarycolor_text" />

        <TextView
            android:id="@+id/tv_service"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_home_service_button"
            android:gravity="center"
            android:text="@string/home_service"
            android:textColor="@color/selector_gray_to_primarycolor_text" />

        <TextView
            android:id="@+id/tv_topic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_home_topic_button"
            android:gravity="center"
            android:text="@string/home_topic"
            android:textColor="@color/selector_gray_to_primarycolor_text" />

        <TextView
            android:id="@+id/tv_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_home_me_button"
            android:gravity="center"
            android:text="@string/home_me"
            android:textColor="@color/selector_gray_to_primarycolor_text" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_home_more_button"
            android:gravity="center"
            android:text="@string/home_more"
            android:textColor="@color/selector_gray_to_primarycolor_text" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>